--- a/roles/nginx/templates/nginx.j2
+++ b/roles/nginx/templates/nginx.j2
@@ -21,6 +21,11 @@ http {
     log_format  graylog2_format  '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for" <msec=$msec|connection=$connection|connection_requests=$connection_requests|millis=$request_time>';
     access_log syslog:server=localhost:12301 graylog2_format;
     error_log syslog:server=localhost:12302;
+  
+    ##Uncomment below if you need log redudancy to local storage
+    #access_log /var/log/nginx/access.log graylog2_format;
+    #error_log /var/log/nginx/error.log graylog2_format;
+
     gzip on;
     gzip_disable "msie6";
     include /etc/nginx/conf.d/*.conf;
